# MPU6250sensor_sample

./: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
build_nrf52dk_nrf52832/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  mpu6250_sample.emProject  mpu6250_sample.emSession  rules.ninja
build_nrf52dk_nrf52832/modules/cmsis/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/cmsis/CMSIS/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nordic/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nrf/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nrf/drivers/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nrf/lib/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nrf/subsys/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/nrfxlib/: cmake_install.cmake
build_nrf52dk_nrf52832/modules/tinycrypt/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_pass_final.cmd.dep  nrf52dk_nrf52832.dts.pre.d  nrf52dk_nrf52832.dts.pre.tmp  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
build_nrf52dk_nrf52832/zephyr/arch/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/drivers/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/drivers/i2c/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/kconfig/: sources.txt
build_nrf52dk_nrf52832/zephyr/lib/: cmake_install.cmake
build_nrf52dk_nrf52832/zephyr/subsys/: cmake_install.cmake
src/: main.c
(+7 files in other folders)
